<resources>
    <string name="app_name">DevloperLife</string>
    <string name="developers_life">Developers Life</string>
    <string name="latest">Последние</string>
    <string name="top">Лучшие</string>
    <string name="hot">Горячие</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="host_ex">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
    <string name="repeat">Повторить</string>
    <string name="posts_ended">Посты закончились</string>
</resources>